Fixed email CTA card bottom spacing

--- a/ghost/admin/app/styles/components/koenig.css
+++ b/ghost/admin/app/styles/components/koenig.css
@@ -1171,6 +1171,10 @@
     margin-left: .5em;
 }
 
+.kg-email-cta-card {
+    padding-bottom: 24px;
+}
+
 
 /* Codemirror overrides
 /* --------------------------------------------------------------- */
