--- a/ghost/admin/app/styles/layouts/editor.css
+++ b/ghost/admin/app/styles/layouts/editor.css
@@ -990,7 +990,7 @@ figure {
 }
 
 .kg-email-cta-card .border-bottom {
-    margin: 5rem 0 1.6rem;
+    margin: 5rem 0 0;
 }
 
 .kg-email-cta-card .kg-card-help {
